# keyfob_firmware

./: .gitattribute  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  License.md  Makefile  README.md  Readme.md  annotated.html  annotated_dup.js  classes.html  codecov.yml  config.h.in  dir_0937102de6aefa85ea195f3f88a55c7c.html  dir_0937102de6aefa85ea195f3f88a55c7c.js  dir_128ebdcf8cce80545e0e76577be8b1b3.html  dir_128ebdcf8cce80545e0e76577be8b1b3.js  dir_1832dd654a746708a83852cddd05c3b6.html  dir_1832dd654a746708a83852cddd05c3b6.js  dir_37ddaeac6fc8f3e1dfb3a01d36ac8199.html  dir_37ddaeac6fc8f3e1dfb3a01d36ac8199.js  dir_45b65f8f897187dd4725ac6e916f326f.html  dir_45b65f8f897187dd4725ac6e916f326f.js  dir_49e56c817e5e54854c35e136979f97ca.html  dir_4b518c123e6fab2609dc44977c5c8899.html  dir_4b518c123e6fab2609dc44977c5c8899.js  dir_4ce6a7f885e2866a554ba9e7335035f1.html  dir_4ce6a7f885e2866a554ba9e7335035f1.js  dir_50beb8cb9e45d74f64e800a01a73d201.html  dir_50beb8cb9e45d74f64e800a01a73d201.js  dir_5194e5fea318fda12687127c23f8aba1.html  dir_5194e5fea318fda12687127c23f8aba1.js  dir_5de43fdb60321685ecedde394ae55ee5.html  dir_5de43fdb60321685ecedde394ae55ee5.js  dir_5e50120286f63f84951c530ed1f5c788.html  dir_5e50120286f63f84951c530ed1f5c788.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_85091ef7638011d886d4c9ece8d39348.html  (+102 more)
.github/workflows/: clangformat.yml  cppcheck.yml  doxygen.yml  flawfinder.yml  lizard.yml  unit-test.yml
cmake/: ClangFormat.cmake  CodeCoverage.cmake  arm_none_eabi.cmake  checkgit.cmake  cppcheck.cmake  doxygen.cmake  flawfinder.cmake  googletest.cmake  libs.cmake  lizard.cmake  project_options.cmake
d0/d25/: group___d_i_o___c_o_n_f_i_g___table.html
d0/d29/: main_8c.html  main_8c.js
d0/d93/: group___s_t_m32_f0xx___system___private___functions.html  group___s_t_m32_f0xx___system___private___functions.js
d0/d99/: group___peripheral__registers__structures.html  group___peripheral__registers__structures.js
d0/dba/: group___peripheral__interrupt__number__definition.html  group___peripheral__interrupt__number__definition.js
d0/dc5/: group___e_x_t_i___c_o_n_f_i_g.html  group___e_x_t_i___c_o_n_f_i_g.js
d0/dc9/: stm32f030x6_8h.html  stm32f030x6_8h.js  stm32f030x6_8h_source.html
d1/d28/: structrcc__peri__t.html  structrcc__peri__t.js
d1/d50/: group___e_v1527.html  group___e_v1527.js
d1/db0/: hal__common__bit_8h_source.html
d1/ddc/: group___peripheral__declaration.html  group___s_t_m32_f0xx___system___exported___constants.html
d2/d08/: hal__exti__cfg_8h.html  hal__exti__cfg_8h.js  hal__exti__cfg_8h_source.html
d2/d18/: ev1527_8c.html  ev1527_8c.js
d2/d64/: group___s_t_m32_f0xx___system___private___defines.html  group___s_t_m32_f0xx___system___private___defines.js
d2/da9/: hal__exti__cfg_8c.html  hal__exti__cfg_8c.js
d2/dfb/: hal__common__helper_8c.html  hal__common__helper_8c.js
d3/d14/: group___t_i_m_e_r___c_o_n_f_i_g___f_u_n_c.html  group___t_i_m_e_r___c_o_n_f_i_g___f_u_n_c.js
d3/d34/: bsp_8h_source.html
d3/d37/: group__timer___c_o_n_f_i_g___f_u_n_c.html  group__timer___c_o_n_f_i_g___f_u_n_c.js
d3/d43/: hal__timer_8h.html  hal__timer_8h.js  hal__timer_8h_source.html
d3/d62/: group___e_x_t_i___c_o_n_f_i_g___m_a_c_r_o.html  group___e_x_t_i___c_o_n_f_i_g___m_a_c_r_o.js
d3/d75/: struct_a_d_c___common___type_def.html  struct_a_d_c___common___type_def.js
d3/db9/: middleware_8h_source.html
d3/dba/: group___device___included.html
d3/dcb/: hal__rcc_8c.html  hal__rcc_8c.js
d3/de4/: group__timer___c_o_n_f_i_g.html  group__timer___c_o_n_f_i_g.js
d4/dab/: system__stm32f0xx_8h.html  (+2 more)
docker/: Dockerfile
scripts/: gen-project.sh  sanity.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  (+58 more)
src/: CMakeLists.txt  CMakePresets.json
src/app/: CMakeLists.txt  main.c
src/bsp/: CMakeLists.txt  bsp.c
src/bsp/include/: bsp.h
src/common/: assert.h
src/drivers/: CMakeLists.txt  spi_flash.c
src/drivers/ev1527/: ev1527.c  ev1527.h
src/drivers/include/: spi_flash.h
src/hal/: CMakeLists.txt
src/hal/common/: hal.c  hal.h  hal_cfg.h  hal_common_bit.h  hal_common_defines.h  hal_common_helper.c  hal_common_helper.h  hal_interrupt_handlers.c  hal_interrupt_handlers.h  hal_pins.h
src/hal/config/: hal_dio_cfg.c  hal_dio_cfg.h  hal_exti_cfg.c  hal_exti_cfg.h  hal_rcc_cfg.c  hal_rcc_cfg.h  hal_timer_cfg.c  hal_timer_cfg.h
src/hal/dio/: hal_dio.c  hal_dio.h
src/hal/exti/: hal_exti.c  hal_exti.h
src/hal/rcc/: hal_rcc.c  hal_rcc.h
src/hal/systick/: hal_systick.c  hal_systick.h
src/hal/timer/: hal_timer.c  hal_timer.h
src/hll/: CMakeLists.txt
src/hll/stm32f030xx/: CMakeLists.txt  hll_rcc.h
src/hll/stm32f030xx/include/: hll.h
src/hll/stm32f030xx/vendor_cmsis/: system_stm32f0xx.c
src/hll/stm32f030xx/vendor_cmsis/include/: stm32f030x6.h  stm32f0xx.h  system_stm32f0xx.h
src/middleware/: CMakeLists.txt  middleware.c
src/middleware/include/: middleware.h
templates/: template.c  template.h  template_test.c
tests/: CMakeLists.txt  testrunner.cpp
tests/fake/hll/: fake_hll.c
tests/fake/hll/include/: cmsis_compiler_override.h  cmsis_gcc_override.h  core_cm0_override.h  hll.h  stm32f030x6_override.h  stm32f0xx_override.h
tests/mock/: hal_cmsis_mock.cpp  hal_mock_fixture.h  hal_systick_mock.cpp
tests/unit/: first_unit_test.cpp  unit_tests.cmake
tests/unit/app/: app_tests.cpp
tests/unit/bsp/: bsp_tests.cpp
tests/unit/drivers/: driver_tests.cpp
tests/unit/hal/: hal_common_tests.cpp  hal_delay_tests.cpp  hal_dio_tests.cpp  hal_exti_tests.cpp  hal_rcc_tests.cpp  hal_systick_tests.cpp  rcc_tests.cpp
tests/unit/middleware/: middleware_tests.cpp
(+205 files in other folders)
